Delete test codes
- 초기 작성되었던 테스트 모델 코드 삭제.
- IaaS 옵션을 사용하지 않을 경우 IaaS 관련 API 사용 불가 안내 코멘트 추가(main.go).
