# paasta-monitoring-api/src/kr/paasta/monitoring-api/dao/api/v1/user.go
@@ -2,9 +2,9 @@ package v1
 
 import (
 	"fmt"
-	"gorm.io/gorm"
 	"github.com/labstack/echo/v4"
 	"github.com/labstack/gommon/log"
+	"gorm.io/gorm"
 	models "paasta-monitoring-api/models/api/v1"
 )
 
@@ -29,43 +29,6 @@ func (u *UserDao) GetMember(params models.MemberInfos) ([]models.MemberInfos, er
 	return members, nil
 }
 
-
-func (u *UserDao) GetUsers(request models.UserInfo, c echo.Context) (tz []models.UserInfo, err error) {
-	// 전달 받은 계정 정보로 데이터베이스에 계정이 존재하는지 확인한다. (test code)
-	var t []models.UserInfo
-	users := u.db.Debug().Table("user_infos").
-		Select(" * ").
-		Find(&t)
-	//fmt.Println(users)
-
-	if users.Error != nil {
-		fmt.Println(users.Error)
-		return t, users.Error
-	}
-	//c.Logger().Info(users)
-
-	return t, err
-}
-
-func (u *UserDao) GetUser(request models.UserInfo, c echo.Context) (tz []models.UserInfo, err error) {
-	// 전달 받은 계정 정보로 데이터베이스에 계정이 존재하는지 확인한다. (test code)
-	var t []models.UserInfo
-	users := u.db.Debug().Table("user_infos").
-		Select(" * ").
-		Where("username = ? ", request.Username).
-		Find(&t)
-	//fmt.Println(users)
-
-	if users.Error != nil {
-		fmt.Println(users.Error)
-		return t, users.Error
-	}
-	//c.Logger().Info(users)
-
-	return t, err
-}
-
-
 func (u *UserDao) GetMemberInfo(param models.MemberInfos, c echo.Context) (tz []models.MemberInfos, err error) {
 	// 전달 받은 계정 정보로 데이터베이스에 계정이 존재하는지 확인한다. (test code)
 	var t []models.MemberInfos
@@ -80,4 +43,3 @@ func (u *UserDao) GetMemberInfo(param models.MemberInfos, c echo.Context) (tz []
 
 	return t, err
 }
-
