# paasta-monitoring-api/src/kr/paasta/monitoring-api/routers/routers.go
@@ -95,15 +95,13 @@ func SetupRouter(conn connections.Connections) *echo.Echo {
 
 	// Router 설정
 	//// Token은 항상 접근 가능하도록
-	e.POST("/api/v1/token", apiToken.CreateToken)        // 토큰 생성
-	e.POST("/api/v1/token2", apiToken.CreateAccessToken) // member_infos 기반 토큰 생성
-	e.PUT("/api/v1/token", apiToken.RefreshToken)        // 토큰 리프레시
+	e.POST("/api/v1/token", apiToken.CreateToken) // 토큰 생성
+	e.PUT("/api/v1/token", apiToken.RefreshToken) // 토큰 리프레시
 
 	//// 그외에 다른 정보는 발급된 토큰을 기반으로 유효한 토큰을 가진 사용자만 접근하도록 middleware 설정
 	//// 추가 설명 : middlewares.CheckToken 설정 (입력된 JWT 토큰 검증 및 검증된 요청자 API 접근 허용)
 	//// Swagger에서는 CheckToken 프로세스에 의해 아래 function을 실행할 수 없음 (POSTMAN 이용)
 	v1 := e.Group("/api/v1", middlewares.CheckToken(conn))
-	v1.GET("/users", apiUser.GetUsers)
 	v1.GET("/members", apiUser.GetMember)
 
 	// Common > Alarm
