# paasta-monitoring-api/src/kr/paasta/monitoring-api/services/api/v1/token.go
@@ -6,9 +6,9 @@ import (
 	"fmt"
 	"github.com/go-redis/redis/v7"
 	"github.com/golang-jwt/jwt"
-	"gorm.io/gorm"
 	"github.com/labstack/echo/v4"
 	"github.com/twinj/uuid"
+	"gorm.io/gorm"
 	"net/http"
 	"os"
 	dao "paasta-monitoring-api/dao/api/v1"
@@ -181,48 +181,15 @@ func CreateAuth(td v1.TokenDetails, user_id string, RedisInfo *redis.Client) (v1
 	return td, nil
 }
 
-// Refresh 토큰 정리 후 적용
-func (h *TokenService) CreateToken(request v1.CreateToken, c echo.Context) (v1.TokenDetails, error) {
-	// 아이디 및 비밀번호 확인 시 JWT 토큰 발급 및 Redis 저장
-
-	// 1. Token 모델을 선언한다.
-	td := v1.TokenDetails{}
-	userInfo := v1.UserInfo{
-		Username: request.Username,
-		Password: request.Password,
-	}
-
-	// 2. 전달 받은 계정 정보로 데이터베이스에 계정이 존재하는지 확인한다.
-	results, err := dao.GetUserDao(h.DbInfo).GetUser(userInfo, c)
-	if err != nil {
-		return td, err
-	}
-	if len(results) == 0 {
-		return td, fmt.Errorf("reason: cannot found username")
-	}
-	// 계정에 대한 비밀번호를 확인한다.
-	if results[0].Password != request.Password {
-		return td, fmt.Errorf("reason: password is incorrect")
-	}
-
-	// 3. Token 생성
-	td, err = CreateToken(td, results[0].Username)
-
-	// 4. Token 저장 (Redis)
-	td, err = CreateAuth(td, results[0].Username, h.RedisInfo)
-	return td, nil
-}
-
-
-func (h *TokenService) CreateAccessToken(request v1.TokenParam, c echo.Context) (v1.TokenDetails, error) {
+func (h *TokenService) CreateToken(request v1.TokenParam, c echo.Context) (v1.TokenDetails, error) {
 	// 아이디 및 비밀번호 확인 시 JWT 토큰 발급 및 Redis 저장
 
 	// 1. Token 모델을 선언한다.
 	td := v1.TokenDetails{}
 	passwdHash := getSha256(request.Passwd)
 	memberInfos := v1.MemberInfos{
-		UserId : request.UserId,
-		UserPw : passwdHash,
+		UserId: request.UserId,
+		UserPw: passwdHash,
 	}
 
 	// 2. 전달 받은 계정 정보로 데이터베이스에 계정이 존재하는지 확인한다.
@@ -241,7 +208,6 @@ func (h *TokenService) CreateAccessToken(request v1.TokenParam, c echo.Context) 
 	td, err = CreateAuth(td, results[0].UserId, h.RedisInfo)
 	return td, nil
 }
-
 
 func (h *TokenService) RefreshToken(request v1.RefreshToken, c echo.Context) (v1.TokenDetails, error) {
 	// RefreshToken 확인 시 기존 JWT 토큰 정보 삭제 및 생성 후 Redis 저장
@@ -290,8 +256,6 @@ func (h *TokenService) RefreshToken(request v1.RefreshToken, c echo.Context) (v1
 
 	return td, nil
 }
-
-
 
 func getSha256(reqMsg string) string {
 	data := []byte(reqMsg)
